<resources>
    <string name="app_name">Nekos</string>
    <string name="login_out">%1$s</string>
    <string name="neko">Neko</string>
    <string name="nekos">Nekos</string>
    <string name="artist">Artist: %1$s</string>
    <string name="view_profile">Profile</string>
    <string name="soon">soon™</string>
    <string name="switch_nsfw">nsfw</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="refresh">Refresh</string>
    <string name="sort">Sort</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="acc_username">%1$s</string>
    <string name="likes">Likes: %1$d</string>
    <string name="favorites">Favorites: %1$d</string>
    <string name="joined">Joined %1$s</string>
    <string name="posted">Posted %1$s</string>
    <string name="given">Has given %1$d likes and %2$d favorites</string>
    <string name="upload">Upload</string>
    <string name="tags">Tags</string>
    <string name="te_artist">Artist</string>
    <string name="nsfw">nsfw</string>
    <string name="nekos_moe">Nekos.moe</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="network_usage_alert">It seems like you\'re using a mobile network connection. Keep in mind this app uses a lot of data, consider switching to a wifi connection.</string>
    <string name="high_data_usage">High data usage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sync">Sync</string>
    <string name="uploaded_by">Uploaded by %1$s</string>
    <string name="approved_by">Approved by %1$s</string>
    <string name="neko_favorites">Favorites: %1$d</string>
    <string name="neko_likes">Likes: %1$d</string>
    <string name="neko_artist">Artist: %1$s</string>
    <string name="neko_tags">%1$s</string>
    <string name="btn_like">Like</string>
    <string name="btn_favorite">Favorite</string>
    <string name="header_title">-</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="age_check">I am 13+ years old</string>
    <string name="must_not_contain_an_symbol">  Must not contain an @ symbol</string>
    <string name="min_8_characters">  Min 8 characters</string>
    <string name="action">Action</string>
    <string name="import_from_danbooru">Import from danbooru</string>
    <string name="post">/post/…</string>
    <string name="toolbar_title">Nekos.moe</string>
    <string name="toolbar_title_profile">Profile</string>
    <string name="unlike">Unlike</string>
    <string name="like">Like</string>
    <string name="unfav">Unfavorite</string>
    <string name="fav">Favorite</string>
    <string name="posted2">%1$d %2$s</string>
</resources>
