<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/neko_drawer"
    tools:showIn="@+id/nav_view">

    <group>
        <item
            android:id="@+id/login_out"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/login_out" />
        <item
            android:id="@+id/view_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/view_profile" />
        <item
            android:id="@+id/sort"
            android:icon="@drawable/ic_menu_sort"
            android:title="@string/sort" />
        <item
            android:id="@+id/upload"
            android:icon="@drawable/ic_menu_upload"
            android:title="@string/upload" />
    </group>

</menu>
