<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_neko_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/viewNekoCard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/fullNekoImg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/neko" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvUploader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/uploaded_by"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewNekoCard" />

        <TextView
            android:id="@+id/tvApproved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/approved_by"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUploader" />

        <TextView
            android:id="@+id/tvNekoFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/neko_favorites"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvApproved" />

        <TextView
            android:id="@+id/tvNekoLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/neko_likes"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNekoFavorites" />

        <TextView
            android:id="@+id/tvArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/neko_artist"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNekoLikes" />

        <TextView
            android:id="@+id/tvTags"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/neko_tags"
            android:textSize="10sp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/viewNekoCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/viewNekoCard"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatButton
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/btnLikeNeko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/thumbsup"
            android:drawableTint="#209cee"
            android:text="@string/btn_like"
            android:textColor="#209cee"
            android:textSize="12sp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvArtist" />

        <androidx.appcompat.widget.AppCompatButton
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/btnFavNeko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawablePadding="9dp"
            android:drawableStart="@drawable/heart"
            android:drawableTint="#ff3860"
            android:text="@string/btn_favorite"
            android:textColor="#ff3860"
            android:textSize="12sp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toEndOf="@+id/btnLikeNeko"
            app:layout_constraintTop_toTopOf="@+id/btnLikeNeko" />

        <androidx.appcompat.widget.AppCompatButton
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/btnCloseNeko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/close"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/close"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLikeNeko"
            app:layout_constraintEnd_toStartOf="@+id/btnShareNeko"/>

        <androidx.appcompat.widget.AppCompatButton
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/btnShareNeko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/share"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/share"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLikeNeko" />

        <androidx.appcompat.widget.AppCompatButton
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/btnSaveNeko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/save"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLikeNeko"
            app:layout_constraintStart_toEndOf="@+id/btnShareNeko"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>