<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/viewNekoCard"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <xyz.kurozero.nekos.ProportionalImageView
            android:id="@+id/fullNekoImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/neko" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnShareNeko"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:text="@string/share"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/btnSaveNeko"
        app:layout_constraintStart_toEndOf="@+id/btnCloseNeko"
        app:layout_constraintTop_toBottomOf="@+id/viewNekoCard" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSaveNeko"
        android:layout_width="124dp"
        android:layout_height="80dp"
        android:text="@string/save"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewNekoCard" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnCloseNeko"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:text="@string/close"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewNekoCard" />

</android.support.constraint.ConstraintLayout>
